# web_data_qgis3

./: CMakeLists.txt  addservicedialog.cpp  addservicedialog.h  addservicedialogbase.ui  resources.qrc  webdatadialog.cpp  webdatadialog.h  webdatadialogbase.ui  webdatafiltermodel.cpp  webdatafiltermodel.h  webdatamodel.cpp  webdatamodel.h  webdataplugin.cpp  webdataplugin.h
